--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  youtube_player_flutter: ^8.1.2
+ 
+
+  
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/assets/icon.jpg"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "lib/assets/icon.jpg"
+  remove_alpha_ios: true
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -66,6 +79,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib\assets\audio1.mp3
+    - lib\assets\icon.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
